# GrangrandMA

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
Max/: GrangrandMA-grainvoice.maxpat  GrangrandMA-scheduler.js  GrangrandMA.maxpat  README.md
Source/: GranularEngine.cpp  GranularEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
